<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013, 2014 Marcus Fedarko
Contact Email: marcus.fedarko@gmail.com

This file is part of FinalGrade.
 
  	FinalGrade is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  FinalGrade is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with FinalGrade.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>

    <string name="app_name">FinalGrade</string>
    <string name="explanation">Enter in your letter grades (A, B, C, D, or E) for each of the specified quarters and exams. Case does not matter.</string>
    <string name="title_activity_main">FinalGrade</string>
    <string name="q1">Quarter 1</string>
    <string name="q2">Quarter 2</string>
    <string name="midterm">Midterm Exam</string>
    <string name="q3">Quarter 3</string>
    <string name="q4">Quarter 4</string>
    <string name="fin">Final Exam</string>
    <string name="calcButton">Calculate Final Grade</string>
    <string name="resultsText">Final Grade: </string>
    <string name="courseLen">Course Length:</string>
    <string name="year">Year-Long</string>
    <string name="semester">Semester</string>
    
    <string name="menu_about">About</string>
    <string name="about_title">About FinalGrade</string>
    <string name="about_version">Version 1.3 &#8211; June 20, 2014</string>
    <string name="disclaimer_title">Grading Systems Disclaimer</string>
    <string name="hcpssDisclaimer">\tThis app is designed to work with grades in the Howard County Public School System (HCPSS). If your school/district uses a different grading system, the grade calculated in this application may not be accurate.</string>
   	<string name="howCalculations_title">How HCPSS Grades are Calculated</string>
   	<string name="howCalculations">\tThe quality point ranges for grades in the HCPSS are:\nA = 3.5 &#8211; 4.00\nB = 2.5 &#8211; 3.49\nC = 1.5 &#8211; 2.49\nD = .75 &#8211; 1.49\nE = Below .75</string>
    <string name="credits">\tFinalGrade is licensed under the GNU GPL Version 3, which means that you can modify and redistribute its source code as you see fit. You can find the full source code for FinalGrade here:\n\n\t<a href="https://github.com/fedarko/FinalGrade">https://github.com/fedarko/FinalGrade</a>\n\n\tYou can find a full copy of the GNU General Public License Version 3 included in the source code root directory as COPYING.txt, and you can also find a copy at:\n\n\t<a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a></string>
    <string name="credits_title">Source Code</string>
    <string name="title_activity_about">FinalGrade</string>
    <string name="authorinfo_title">About the Author</string>
	<string name="authorinfo">\t<b>FinalGrade</b> was created by Marcus Fedarko. If you have any questions, comments, concerns, or anything else, feel free to contact him at mfedarko.apps@gmail.com.\n\n\tYou can check out Marcus\' other apps on the Google Play store here:</string>
	<string name="other_apps_button">Other Apps</string>
</resources>