<!--  Copyright 2013 Marcus Fedarko
Contact Email: marcus.fedarko@gmail.com

This file is part of FinalGrade.
 
  	FinalGrade is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  FinalGrade is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with FinalGrade.  If not, see <http://www.gnu.org/licenses/>. -->
  
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <TextView
	        android:id="@+id/about_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:text="@string/about_title"
		    android:textAppearance="?android:attr/textAppearanceLarge" /> 
		       
	    <TextView
	        android:id="@+id/howCalculations_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/about_title"
	        android:layout_marginTop="10dp"
	        android:text="@string/howCalculations_title"
		    android:textAppearance="?android:attr/textAppearanceMedium" />        
	    
	    <TextView
	        android:id="@+id/howCalculations"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/howCalculations_title"
	        android:text="@string/howCalculations" />	
	        
	    <TextView
	        android:id="@+id/disclaimer_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/howCalculations"
	        android:layout_marginTop="10dp"
	        android:text="@string/disclaimer_title"
		    android:textAppearance="?android:attr/textAppearanceMedium" />        
	    
	    <TextView
	        android:id="@+id/hcpssDisclaimer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/disclaimer_title"
	        android:text="@string/hcpssDisclaimer" />
	    
	    <TextView
	        android:id="@+id/credits_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/hcpssDisclaimer"
	        android:layout_marginTop="10dp"
	        android:text="@string/credits_title"
		    android:textAppearance="?android:attr/textAppearanceMedium" />   
		    	        	 
	    <TextView
	        android:id="@+id/credits"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_centerHorizontal="true"
	    	android:layout_below="@+id/credits_title"
	    	android:text="@string/credits" />
	    
	    <TextView
	        android:id="@+id/authorinfo_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/credits"
	        android:layout_marginTop="10dp"
	        android:text="@string/authorinfo_title"
		    android:textAppearance="?android:attr/textAppearanceMedium" />   
		    	        	 
	    <TextView
	        android:id="@+id/authorinfo"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_centerHorizontal="true"
	    	android:layout_below="@+id/authorinfo_title"
	    	android:text="@string/authorinfo" />
	    
	   	<Button
	        android:id="@+id/m_physics_button"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_centerHorizontal="true"
	    	android:layout_below="@+id/authorinfo"
	    	android:text="@string/m_physics_button"
	    	android:onClick="open_m_physics" />
	    
	</RelativeLayout>
</ScrollView>